# D.R.U.M

./: .gitignore  README.md
DRUM Library/: MAX4530EAPT.lib
DRUM Library.pretty/: LINPOT-10KDB.kicad_mod
doc/: component-docs.md  ipc.md  samples.md  serbus.md  software-resources.md  thoughts.md
doc/img/: timing-diagram.txt
module/: MainEnclosure.SLDPRT  ~$MainEnclosure.SLDPRT
module/cad/: BasePlate.SLDPRT  EnclosureAssembly.SLDASM  MainEnclosure.SLDPRT  ModuleUI.cdr  ModuleUIReal.cdr  RV24AF-22-15K.step  asm_mx_asm_PLATE.stp.SLDPRT  moduleAssem.SLDASM
module/hardware/: REV1.2.md  custom-lib.kicad_sym  digital.kicad_sch  fp-lib-table  module-hardware.kicad_pcb  module-hardware.kicad_prl  module-hardware.kicad_pro  module-hardware.kicad_sch  module-hardware.kicad_sch-bak  module-hardware.step  sym-lib-table
module/hardware/custom.pretty/: TE_ConnMSLPT5252CG1.kicad_mod
module/software/: CMakeLists.txt  module.c  module.cpp  module.h  module.pio  serbus.h
samples/: sample_gen.py
samples/bass-0/: L1.1.raw  L1.2.raw  L1.3.raw  L1.4.raw  L2.1.raw  L2.2.raw  L2.3.raw  L2.4.raw  L3.1.raw  L3.2.raw  L3.3.raw  L3.4.raw  L4.1.raw  L4.2.raw  L4.3.raw  L4.4.raw  L5,1.raw  L5.2.raw  L5.3.raw  L5.4.raw  L6.1.raw  L6.2.raw  L6.3.raw  L6.4.raw  L7.1.raw  L7.2.raw  L7.3.raw  L7.4.raw  L8.1.raw  L8.2.raw  L8.3.raw  L8.4.raw
sequencer/cad/: Adafruit 0.96in 128x64 OLED STEMMA QT.step.SLDPRT  BasePlate.SLDPRT  EnclosureAssembly.SLDASM  KeypadSandwich.SLDPRT  MainEnclosure.SLDPRT  SeqBase.SLDPRT  SeqTop.SLDPRT  SequencerInterface.cdr  SequencerInterface.dxf  TSJack.SLDPRT  seqPCB.step  sequencer-hardware-B_Silkscreen.dxf  sequencer-hardware-F_Silkscreen.dxf
sequencer/hardware/: REV1.2.md  TS.STEP  custom-lib.kicad_sym  digital.kicad_sch  fp-lib-table  sequencer-hardware.kicad_pcb  sequencer-hardware.kicad_prl  sequencer-hardware.kicad_pro  sequencer-hardware.kicad_sch  sequencer-hardware.kicad_sch-bak  sym-lib-table
sequencer/hardware/custom.pretty/: SolderJumper-2_P1.3mm_Bridged_Pad1.0x1.5mm.kicad_mod
sequencer/software/: CMakeLists.txt  module.c  module.h  oled.c  oled.h  pico_sdk_import.cmake  sequencer.c  sequencer.cpp  sequencer.h  sequencer.pio  sequencer.pio.h  sequencer.py  serbus.cpp  serbus.h
sequencer/software/Adafruit_Lib/: Adafruit_GFX.cpp  Adafruit_GFX.h  Adafruit_I2CDevice.h  Adafruit_NeoTrellis.cpp  Adafruit_NeoTrellis.h  Adafruit_SSD1306.cpp  Adafruit_SSD1306.h  Adafruit_seesaw.cpp  Adafruit_seesaw.h  Arduino.cpp  Arduino.h  Wire.cpp  Wire.h  seesaw_neopixel.h  splash.h
sequencer/software/Adafruit_Lib/scripts/: splash.h  splash1.xcf
sequencer/software/Arduino_Lib/: String.cpp  String.h
slidepot/cad/slidepot-45/: slidepot-45.step  slidepot-45.step.SLDPRT
slidepot/cad/slidepot-60/: slidepot-60.step  slidepot-60.step.SLDPRT
slidepot/hardware/slidepot-45/: PTA4543.stp  slidepot-45.kicad_pcb  slidepot-45.kicad_prl  slidepot-45.kicad_sch
slidepot/hardware/slidepot-45s/: slidepot-45s.kicad_pcb  slidepot-45s.kicad_prl  slidepot-45s.kicad_sch
slidepot/hardware/slidepot-60/: pta6043-2x10cixxxx.stp  slidepot-60.kicad_pcb  slidepot-60.kicad_prl  slidepot.kicad_sch
(+5 files in other folders)
